Work on generators

--- a/gens/src/main/resources/META-INF/accesstransformer.cfg
+++ b/gens/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,1 +1,2 @@
 public net.minecraft.world.storage.loot.functions.SetName <init>([Lnet/minecraft/world/storage/loot/conditions/ILootCondition;Lnet/minecraft/util/text/ITextComponent;Lnet/minecraft/world/storage/loot/LootContext$EntityTarget;)V
+public net.minecraft.world.storage.loot.functions.SetLootTable <init>([Lnet/minecraft/world/storage/loot/conditions/ILootCondition;Lnet/minecraft/util/ResourceLocation;J)V
